// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 1`] = `
<div
  className="css-1pbowfz"
  id="test-grid"
/>
`;

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 2`] = `
<div
  className="css-1hnv7xz"
  id="chakra"
/>
`;

exports[`SimpleGrid Renders the SimpleGrid UI snapshot correctly 3`] = `
<div
  className="css-1pbowfz"
  data-testid="props"
  id="props"
/>
`;
